# paynless-framework

./: .env  .env.example  .gitignore  .prettierrc  2024-07-23T210500_NEXT_PROMPT.md  2025-04-21T210500_NEXT_PROMPT.md  20250630_schema.sql  3-UI-Component-Implementation.md  AI_INTEGRATION_PLAN.md  ANALYSIS_parenthesis_paralysis_master_plan_comparison.md  CLAUDE.md  Cargo.toml  DEV_PLAN.md  IMPLEMENTATION_PLAN.md  README.md  STRUCTURE.md  TESTING_PLAN.md  ZUSTAND-IMPLEMENTATION.md  deno.json  eslint.config.js  local_schema.sql  netlify.toml  nx.json  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  readme.md  schema.diff  tailwind.config.js  test-streaming.js  tsconfig.base.json  tsconfig.json  vitest.config.ts
.bolt/supabase_discarded_migrations/: 20250330200603_steep_breeze copy.sql  20250330211920_pink_tower.sql  20250330212013_long_wind.sql  20250330215806_small_ocean.sql  20250330220950_dry_star.sql  20250331003703_shiny_bush copy.sql  subscription_transactions copy.sql
.cursor/commands/: check.prompt.md  compliance.md  generateNode.prompt.md  guard.md  guard.prompt.md  guardTest.md  implement.md  integrate.md  interface.md  interface.prompt.md  interfaceTest.md  linterComplaint.prompt.md  mock.md  plan.md  plan.prompt.md  provide.md  start.md  testFailure.md  testFailure.prompt.md  unitTest.md  unitTest.prompt.md
.cursor/rules/: ai_agent_development_methodology.md  cursor_architecture_rules.md  paynless-rules.mdc  rules.md  rules.mdc
.github/instructions/: agent-output.instructions.md  composition.instructions.md  copilot-instructions.md  dependency-injection.instructions.md  discovery.instructions.md  error-handling.instructions.md  factory.instructions.md  fidelity.instructions.md  linting.instructions.md  logging.instructions.md  loop.instructions.md  mode.instructions.md  ordering.instructions.md  testing.instructions.md  typing.instructions.md  universal.instructions.md  workplan.instructions.md
.github/workflows/: build-test-lint.yml  ci.yml
apps/desktop/: package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
apps/web/: .env.example  index.html  lighthouse.json  lighthouse.md  package.json  setupTests.ts  stats.html  tailwind.config.js  tsconfig.json  vite.config.ts  vitest.config.ts
apps/windows/: README.md  package.json  vite.config.ts
apps/windows/src-tauri/: Cargo.toml  tauri.conf.json
apps/windows/src-tauri/capabilities/: default.json
apps/windows/src-tauri/crates/core-crypto/: Cargo.toml
apps/windows/src-tauri/crates/core-crypto/src/: lib.rs
apps/windows/src-tauri/crates/storage-interface/: Cargo.toml
apps/windows/src-tauri/crates/storage-interface/src/: lib.rs
apps/windows/src-tauri/src/: capabilities.rs  crypto_commands.rs  lib.rs  main.rs  wallet_commands.rs
docs/: 2024-07-23T210500_NEXT_PROMPT.md  2025-2026 Model Config Data from Providers.md  20250422_NOTIFICATIONS_PROMPT.md  DEV_PLAN.md  IMPLEMENTATION_PLAN.md  Instructions for Agent v2.md  Instructions for Agent.md  STRUCTURE.md  TESTING_PLAN.md  bug_document_relationships_stage_role_vs_anchor.md  dev_plan.md  investigation.md  struct.md  tests.md
docs/architecture/: tauri_bridge.md
docs/development/: PlatformCapabilities.md
docs/implementations/: 20250421-markdown-rendering.md  20250422_Multitenant.md  20250422_Notifications.md  20250422_Notifications_and_Tenants.md  20250422_Refactor_Types.md  20250423112244_Supabase_Auth_Fix.md  20250424174735_auth_req_cleanup.md  20250430_FixAuthListenerHandling.md  IMPLEMENTATION_PLAN.md  (+3 more)
example/: gemini_2.5_flash_0_business_case_prompt.md  gemini_2.5_flash_0_generate_final_synthesis_header_planner_prompt.md  gemini_2.5_flash_0_milestone_schema_prompt.md  gemini_2.5_flash_0_prepare_pairwise_synthesis_header_planner_prompt.md  gemini_2.5_flash_1_technical_requirements_prompt.md  google-gemini-2.5-flash_0_0742819d_header_context.json  google-gemini-2.5-flash_0_ebc6c72d_header_context.json  google-gemini-2.5-flash_0_feature_spec_1f2f40ac_raw.json  google-gemini-2.5-flash_0_feature_spec_1f2f40ac_rendered.md  google-gemini-2.5-flash_0_milestone_schema_3d73be34.md  google-gemini-2.5-flash_0_milestone_schema_raw.json  google-gemini-2.5-flash_0_product_requirements_b553d7e2.md  google-gemini-2.5-flash_0_product_requirements_b553d7e2_raw.json  google-gemini-2.5-flash_0_product_requirements_b553d7e2_rendered.md  google-gemini-2.5-flash_0_system_architecture_b553d7e2_raw.json  google-gemini-2.5-flash_0_system_architecture_b553d7e2_rendered.md  google-gemini-2.5-flash_0_tech_stack_b553d7e2.md  google-gemini-2.5-flash_0_tech_stack_b553d7e2_raw.json  google-gemini-2.5-flash_0_tech_stack_b553d7e2_rendered.md  google-gemini-2.5-flash_0_technical_requirements_5c802e6f.md  google-gemini-2.5-flash_0_technical_requirements_raw.json  google-gemini-3-flash-preview_0_master_plan_raw.json  google-gemini-3-flash-preview_0_master_plan_rendered.md  google-gemini-3-flash-preview_0_milestone_schema_raw.json  google-gemini-3-flash-preview_0_milestone_schema_rendered.md  google-gemini-3-flash-preview_0_technical_requirements_raw.json  google-gemini-3-flash-preview_0_technical_requirements_rendered.md  integration_test_rendered_technical_requirements_prompt.md
memory/: MEMORY.md  feedback_do_not_touch_interface_file.md
netlify/: package.json  tsconfig.json
scripts/: build.js  deploy-socket-io.sh  test-socket-io.sh  update-imports.js
src/: App.tsx  imports.ts  index.css  index.html
supabase/: .gitignore  config.toml  deno.json  deno.jsonc  import_map.json  package.json  project.json  seed.sql  supabase.test.output.md  types_db.ts
tests/: auth.test.tsx  setup.ts
troubleshooting/: Continuation-to-Retry bug.md
(+2453 files in other folders)
