[workspace]
resolver = "2" # Explicitly set resolver version
members = [
    "apps/windows/src-tauri", # Path to the Tauri app crate
    "apps/windows/src-tauri/crates/core-crypto", # UPDATED Path to the new crypto crate location
    "apps/windows/src-tauri/crates/storage-interface" # ADDED storage-interface crate
]

# Optional: Define shared dependencies or profiles
[profile.release]
lto = true
codegen-units = 1
panic = 'abort' 