[package]
name = "paynless-desktop"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "windows_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.0-beta.12", features = [] }

[dependencies]
tauri = { version = "2.0.0", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri-plugin-opener = "2.2.6"
tauri-plugin-dialog = { version = "2.0.0-beta.8", features = [] }
core-crypto = { path = "./crates/core-crypto" }
hex = "0.4"
ed25519-dalek = { version = "2.1.1", features = ["rand_core"] }

[dev-dependencies]
tempfile = "3.10.1"

