# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "core-crypto"
version = "0.1.0"
edition = "2024"

[dependencies]
# Hashing
# blake3 = { version = "1.5", default-features = false } # Removed due to incorrect results
sha3 = "0.10" # Using SHA3-256 as backup

# Symmetric Encryption (AEAD)
chacha20poly1305 = { version = "0.10", features = ["heapless"] } # Includes AEAD traits

# Signatures & Key Exchange
ed25519-dalek = { version = "2.1", features = ["rand_core"] } # For Ed25519
x25519-dalek = "2.0" # For X25519
signature = "2.2" # Trait needed by ed25519-dalek

# Key Derivation
hkdf = "0.12"
sha2 = "0.10" # Underlying hash for HKDF

# Randomness
rand = { version = "0.8", features = ["std", "std_rng"] }
rand_core = "0.6" # Often needed by crypto crates like ed25519-dalek

# Error Handling
thiserror = "1.0"

# Serialization (Likely needed for keys/tokens eventually)
# serde = { version = "1.0", features = ["derive"], optional = true }
# base64 = { version = "0.21", optional = true }

# Mnemonic / Seed Handling (Might live elsewhere, but potentially useful here)
# bip39 = { version = "2.0", optional = true }

[dev-dependencies]
hex = "0.4" # For decoding hex strings in tests
