# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "core-crypto"
version = "0.1.0"
edition = "2024"

[dependencies]
# Hashing
# blake3 = { version = "1.5", default-features = false } # Removed due to incorrect results
sha3 = "0.10.8" # Using SHA3-256 as backup

# Symmetric Encryption (AEAD)
chacha20poly1305 = "0.10.1" # Includes AEAD traits

# Signatures & Key Exchange
ed25519-dalek = { version = "2.1.1", features = ["rand_core"] } # For Ed25519
x25519-dalek = { version = "2.0.1", features = ["static_secrets"] } # For X25519
signature = { version = "2.2.0", features = ["rand_core"] } # Trait needed by ed25519-dalek

# Key Derivation
hkdf = "0.12"
sha2 = "0.10" # Underlying hash for HKDF

# Randomness
rand = "0.8"
rand_core = { version = "0.6", features = ["std"] } # Often needed by crypto crates like ed25519-dalek

# Error Handling
thiserror = "1.0"

# Serialization (Likely needed for keys/tokens eventually)
serde = { version = "1.0", features = ["derive"], optional = true }
bip39 = "2.1.0"
# base64 = { version = "0.21", optional = true }

# Mnemonic / Seed Handling (Might live elsewhere, but potentially useful here)
# bip39 = { version = "2.0", optional = true }

[dev-dependencies]
hex = "0.4" # For decoding hex strings in tests
